Join game working
